# Roshera-CAD

./: .env.partner.example  .gitignore  .mcp.json  AGENT_GEOMETRY_LOOP.md  AIRCRAFT_LOOP.md  ARCHITECTURE-ANALYSIS.md  ASSEMBLY_LOOP.md  ASSEMBLY_SOLVE_LOOP.md  BENCHMARKS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY-GRAPH.md  DEPENDENCY_GRAPH.mermaid  EXACT_PREDICATES_CAMPAIGN.md  KERNEL_AUDIT_2026-04-19.md  KERNEL_IMPROVEMENT_PLAN.md  KNOWN_BUGS.md  LICENSE  OVERNIGHT_FIX_CAMPAIGN.md  README.md  SESSION_HANDOFF_2026-06-10.md  SESSION_HANDOFF_2026-06-13.md  SESSION_HANDOFF_2026-06-15.md  SESSION_HANDOFF_2026-06-16.md  SESSION_HANDOFF_2026-06-20.md  SESSION_HANDOFF_2026-06-24.md  SKETCHER_OVERHAUL_CAMPAIGN.md  VERIFICATION_FORT_BLUEPRINT.md  _scene.json  build_engine.mjs  build_f1.mjs  build_nozzle.mjs  build_rao.mjs  build_rao_revolve.mjs  docker-compose.partner.yml  package-lock.json  package.json  roshera-loops.mjs  shoot.mjs
roshera-backend/: .dockerignore  .gitignore  .rust-analyzer.json  CLAUDE.md  Cargo.toml  Dockerfile  build_all.sh  clippy.toml  docker-compose.yml  test_trait.rs  verify.sh
roshera-backend/.config/: nextest.toml
roshera-backend/.superpowers/sdd/: fixC-chamfer-offset-report.md  task-82-fillet-report.md
roshera-backend/ai-integration/: AI_INTEGRATION_COMPLETE.md  Cargo.toml  download_llama_q8.py  download_llama_tokenizer.py  download_models.py  download_native_models.py
roshera-backend/ai-integration/benches/: ai_benchmarks.rs
roshera-backend/ai-integration/config/: vision.toml
roshera-backend/ai-integration/scripts/: download_llvm.ps1  download_whisper_model.ps1  install_llvm.ps1
roshera-backend/ai-integration/src/: audio_processor.rs  audio_processor_advanced.rs  audio_processor_rnnoise.rs  audio_processor_simple.rs  commands.rs  context_builder.rs  executor.rs  full_integration_executor.rs  lib.rs  parser.rs  processor.rs  session_aware_processor.rs  smart_router.rs  timeline_aware_executor.rs  tool_dispatch.rs  translator.rs  universal_endpoint.rs
roshera-backend/ai-integration/tests/: vision_integration_test.rs
roshera-backend/api-server/: Cargo.toml  app.rs  dashboard.html
roshera-backend/api-server/examples/: vlm_defect_demo.rs
roshera-backend/api-server/src/: VIEWPORT_BRIDGE.md  agent_registry.rs  agent_registry_tests.rs  assembly_instances.rs  assembly_mates.rs  assembly_mgr.rs  auth_middleware.rs  auth_slice1_tests.rs  auth_slice4_tests.rs  auth_slice5_tests.rs  blackboard.rs  blend_failed_harness.rs  bounded_exec.rs  branches.rs  csketch.rs  debug_test.rs  delta_handlers.rs  drawing_mgr.rs  durability.rs  durability_boot_tests.rs  error_catalog.rs  evidence_pack_tests.rs  fillet_payload.rs  fillet_radius_harness.rs  frame.rs  handlers_impl.rs  idempotency.rs  kernel_state.rs  main.rs  metrics.rs  part_mgr.rs  reconcile_task.rs  router_integration_tests.rs  sketch.rs  transactions.rs  viewport_bridge.rs
roshera-backend/assembly-engine/: Cargo.toml
roshera-backend/assembly-engine/benches/: assembly_solver.rs  interference.rs
roshera-backend/assembly-engine/src/: certificate.rs  constrainedness.rs  decompose.rs  grounding.rs  interference.rs  jacobian.rs  joint.rs  lib.rs  mate_anchor.rs  mate_contact.rs  mate_residual.rs  motion.rs  report.rs  solve_input.rs  solver.rs  sweep.rs  types.rs
roshera-backend/assembly-engine/tests/: certificate_v2.rs  decomposition.rs  dof_table.rs  f6_concave_interference.rs  fixed_mate_rigid.rs  gimbal_dogfood.rs  jacobian_gate.rs  motion_drag.rs  rocket_engine_assembly.rs  solver_scale.rs  sweep_toi.rs
roshera-backend/export-engine/: Cargo.toml  EXPORT_ENGINE_COMPLETE.md
roshera-backend/export-engine/src/: engine.rs  formats.rs  lib.rs  validation.rs
roshera-backend/export-engine/tests/: f2_flange_step.rs  produce_fixed_sample.rs  ros_format_tests.rs  ros_roundtrip_harness.rs  step_blend_roundtrip.rs  step_format_tests.rs  step_import_corpus.rs  step_nurbs_walls.rs  step_occt_pcurve_gate.rs  step_roundtrip_tests.rs  step_sketch_bore.rs  step_sketch_slot.rs
roshera-backend/export-engine/tools/: step_occt_validate.py
roshera-backend/geometry-engine/: COMPILATION_STATUS.md  Cargo.toml  EVIL_EDGE_CASES.md  GEOMETRY_ENGINE_ROADMAP.md  KNOWN_REDS.md  PERFORMANCE_METRICS.md  PERSISTENT_ID_AUDIT.md  _car_body.json  benchmark_runner.rs  test_math_isolation.rs  test_math_module.rs
roshera-backend/geometry-engine/benches/: boolean_classification.rs  certificate_cost.rs  geometry_bench.rs  sketch_solver.rs  tessellation_bench.rs
roshera-backend/geometry-engine/examples/: README.md  certified_exploration.rs  demo_booleans.rs  demo_extrude_revolve.rs  demo_features.rs  demo_pattern_draft.rs  demo_primitives.rs  demo_sweep_loft.rs  demo_transforms.rs  quick_demo.rs  run_nurbs_bench.rs  stress_test_demo.rs  tess_quick.rs  test_primitives.rs
roshera-backend/geometry-engine/src/: lib.rs  units.rs
roshera-backend/geometry-engine/tests/: adversarial_predicate_census.rs  agent_build_eval.rs  agent_render_gate.rs  analytic_faces.rs  bezier_patch_split_properties.rs  blend_conflict_detection.rs  blend_scar_preflight.rs  blend_topology_regression.rs  blend_weld_stress.rs  cd_adversarial.rs  (+204 more)
roshera-backend/rag-engine/: Cargo.toml  DOCUMENTATION.md  ENTERPRISE_ARCHITECTURE.md  PRODUCTION_STATUS.md  RAG_ARCHITECTURE_REVIEW.md  README.md  TURBORAG_PRODUCT.md  TURBORAG_STATUS.md  WHY-RAG-IS-NECESSARY.md  admin_dashboard_demo.html  download_models.py  real_indexer.py  search_demo.py  search_interface.py  show_search_system.py  standalone_search_demo.py  test_admin_dashboard.py  test_hybrid_search.py  test_indexer.py  test_native_embeddings.py  turborag_search.py
roshera-backend/ros-format/: Cargo.toml
roshera-backend/scripts/: benchmark.sh  demo.sh  dev.sh  generate-uuid.sh  red-gate.ps1  run_kernel_demos.sh  setup.sh  test.sh
roshera-backend/session-manager/: Cargo.toml
roshera-backend/shared-types/: Cargo.toml
roshera-backend/src/: memory_analysis.rs
roshera-backend/timeline-engine/: Cargo.toml  README.md  TIMELINE_ENGINE_COMPLETE.md
roshera-backend/verdict-harness/: Cargo.toml
(+738 files in other folders)
