[workspace]
members = [
    "shared-types",
    "geometry-engine", 
    "session-manager",
    "timeline-engine",
    "api-server",
    "ai-integration",
    "export-engine"
]
resolver = "2"


[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0.12"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.8.4", features = ["ws"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
dashmap = "6.1.0"
parking_lot = "0.12"
rayon = "1.8"
lru = "0.16.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.bench]
debug = true

# Workspace-wide clippy lint policy.
#
# Production code must not `unwrap()` or `expect()` outside of invariants
# that are explicitly proven immediately above the call site. Test modules
# and examples are allowed to unwrap freely via clippy.toml allowances.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "warn"
todo = "deny"
unimplemented = "deny"
