[workspace]
members = [
    "shared-types",
    "geometry-engine", 
    "session-manager",
    "timeline-engine",
    "api-server",
    "ai-integration",
    "export-engine"
]
resolver = "2"


[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0.12"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.8.4", features = ["ws"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
dashmap = "6.1.0"
parking_lot = "0.12"
rayon = "1.8"
lru = "0.16.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.bench]
debug = true

# Workspace-wide clippy lint policy.
#
# Production code must not `unwrap()` or `expect()` outside of invariants
# that are explicitly proven immediately above the call site. Test modules
# and examples are allowed to unwrap freely via clippy.toml allowances.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "warn"
todo = "deny"
unimplemented = "deny"

# Stylistic lints relaxed for numerical / topological kernel idioms.
# These are not safety lints — they are preference hints from clippy.
# Numerical-kernel code (nalgebra, ndarray pattern) routinely uses
# `for i in 0..arr.len()` over `.iter().enumerate()` because the index
# is the semantic quantity (de Boor recurrences, knot spans, basis evals).
# `to_*` methods on Copy types take `&self` to align with the broader
# `&self` convention used throughout the kernel and to keep call sites
# explicit. `too_many_arguments` would force pessimistic struct-wrapping
# of B-Rep operation parameters that are clearer as positional args.
needless_range_loop = "allow"
wrong_self_convention = "allow"
too_many_arguments = "allow"
incompatible_msrv = "allow"
upper_case_acronyms = "allow"
manual_memcpy = "allow"
repeat_vec_with_capacity = "allow"
ptr_arg = "allow"
borrowed_box = "allow"
new_without_default = "allow"
field_reassign_with_default = "allow"
needless_late_init = "allow"
inherent_to_string = "allow"
single_match = "allow"
neg_cmp_op_on_partial_ord = "allow"
map_identity = "allow"
map_flatten = "allow"
unwrap_or_default = "allow"
vec_init_then_push = "allow"
legacy_numeric_constants = "allow"
large_enum_variant = "allow"
doc_lazy_continuation = "allow"
