[workspace]
members = [
    "shared-types",
    "geometry-engine",
    "session-manager",
    "timeline-engine",
    "api-server",
    "ai-integration",
    "export-engine",
    "ros-format",
    "verdict-harness"
]
resolver = "2"


[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0.12"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
axum = { version = "0.8.4", features = ["ws"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
dashmap = "6.1.0"
parking_lot = "0.12"
rayon = "1.8"
lru = "0.16.0"

[profile.release]
lto = true
codegen-units = 1
# UNWIND, not abort. The tessellator calls the third-party `cdt` crate, which
# `assert!`s (panics) rather than returning `Err` on some legitimately-hard
# degenerate inputs (e.g. a constrained-edge insertion it can't satisfy on an
# annular cap carrying an offset hole, or a near-cocircular curved-CDT contour —
# `triangulate.rs:965` "Failed to create fixed edge"). Both cdt call sites
# (`tessellation::surface::triangulate_planar_polygon` and
# `tessellation::curved_cdt::run_cdt`) wrap that call in `catch_unwind` and
# degrade a panicked face to a recoverable per-face error — but `panic="abort"`
# turns that catch into a no-op and takes the whole api-server process down
# (BORE-INTO-REVOLVED-FLANGE CDT PANIC, KNOWN_BUGS). `unwind` lets the existing
# recovery run, so one bad face can never abort the server. The live `demo`
# profile already inherits dev's unwind; this makes `release` match.
panic = "unwind"
strip = true
opt-level = 3

[profile.bench]
debug = true

# Live-server profile: `cargo run -p api-server --profile demo`.
#
# The interactive dev servers were running the plain dev profile, and the
# unoptimized float-heavy tessellator dominated every interactive op
# (measured 2026-06-12: a 64-segment circle extrude spent 1110 ms of its
# 1131 ms server total inside `tessellate_solid` — the kernel extrude
# itself was ~20 ms). `demo` keeps dev's fast incremental semantics but
# optimizes codegen, recovering most of the release-profile speedup
# without LTO link cost. It is OPT-IN and never used by CI (which builds
# dev/test — see the NOTE below for why CI must stay at opt-level 0), so
# the 2-core runner budget is untouched.
[profile.demo]
inherits = "dev"
opt-level = 2
# Line-tables-only debug info: dev's full PDBs dominated demo link time
# and contributed to LNK1318 pressure; backtraces stay readable.
debug = 1

# The interactive hot path lives entirely in geometry-engine (and the
# deps it leans on, which keep the profile's opt-level 2 above). The
# crates below are orchestration glue — handlers, event plumbing,
# providers, exporters — whose codegen time at opt2 dominated every
# server rebuild (~8-12 min per kernel change at 2 jobs) for zero
# measurable runtime benefit. opt0 here cut the rebuild roughly in
# half while keeping kernel ops at full speed.
[profile.demo.package.api-server]
opt-level = 0
[profile.demo.package.timeline-engine]
opt-level = 0
[profile.demo.package.session-manager]
opt-level = 0
[profile.demo.package.ai-integration]
opt-level = 0
[profile.demo.package.export-engine]
opt-level = 0

# NOTE: a test/dev `opt-level` profile (dev=1/test=2/deps=3) was trialled to
# speed the float-heavy suite — it cut the local geometry-engine lib run 8.4s →
# 1.68s. It was REVERTED because on the 2-core GitHub runner the cold
# (cache-miss) optimized build of the whole workspace + deps + every nextest
# binary exceeded the 40-min Test-Suite budget AND overran the runner disk, and
# the run was cancelled before it could warm the cache — so it could never
# converge. CI speed is delivered by cargo-nextest instead (parallel exec, no
# compile-time cost); the suite already runs ~10 min at opt-level 0. Devs who
# want faster LOCAL tests can opt in with a scoped override in a personal
# `.cargo/config.toml` or `[profile.dev.package.geometry-engine] opt-level = 2`
# (one crate ≈ the whole compile cost, recovers most of the win).

# Workspace-wide clippy lint policy.
#
# Production code must not `unwrap()` or `expect()` outside of invariants
# that are explicitly proven immediately above the call site. Test modules
# and examples are allowed to unwrap freely via clippy.toml allowances.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "warn"
todo = "deny"
unimplemented = "deny"

# Stylistic lints relaxed for numerical / topological kernel idioms.
# These are not safety lints — they are preference hints from clippy.
# Numerical-kernel code (nalgebra, ndarray pattern) routinely uses
# `for i in 0..arr.len()` over `.iter().enumerate()` because the index
# is the semantic quantity (de Boor recurrences, knot spans, basis evals).
# `to_*` methods on Copy types take `&self` to align with the broader
# `&self` convention used throughout the kernel and to keep call sites
# explicit. `too_many_arguments` would force pessimistic struct-wrapping
# of B-Rep operation parameters that are clearer as positional args.
needless_range_loop = "allow"
wrong_self_convention = "allow"
too_many_arguments = "allow"
incompatible_msrv = "allow"
upper_case_acronyms = "allow"
manual_memcpy = "allow"
repeat_vec_with_capacity = "allow"
ptr_arg = "allow"
borrowed_box = "allow"
new_without_default = "allow"
field_reassign_with_default = "allow"
needless_late_init = "allow"
inherent_to_string = "allow"
single_match = "allow"
neg_cmp_op_on_partial_ord = "allow"
map_identity = "allow"
map_flatten = "allow"
unwrap_or_default = "allow"
vec_init_then_push = "allow"
legacy_numeric_constants = "allow"
large_enum_variant = "allow"
doc_lazy_continuation = "allow"
