[package]
name = "ai-integration"
version = "0.1.0"
edition = "2021"
description = "AI and natural language processing for Roshera CAD"
license = "Apache-2.0"

[dependencies]
shared-types = { path = "../shared-types" }
geometry-engine = { path = "../geometry-engine"}
session-manager = { path = "../session-manager" }
timeline-engine = { path = "../timeline-engine" }
export-engine = { path = "../export-engine" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = "1.10"
lazy_static = "1.4"
ordered-float = "4.5"

# Async & Concurrency
async-trait = "0.1"
futures = "0.3"

# Configuration
config = { version = "0.14", default-features = false, features = ["toml"] }
dotenvy = "0.15"

# Metrics & Logging
tracing = { workspace = true }
metrics = "0.21"

# HTTP client for hosted LLM APIs (Claude, OpenAI, etc.)
reqwest = { version = "0.12", features = ["json"] }

# For TTS - Native implementations
base64 = "0.22"  # For encoding audio data in JSON

# CLI tools
clap = { version = "4.5", features = ["derive"], optional = true }


# For debug tools
chrono = "0.4"  # For timestamps
sha2 = "0.10"   # For computing audio cache keys
dashmap = "6.1" # For concurrent hash maps

[features]
default = []
openai = []
anthropic = []
mock-providers = []  # For testing
cli = ["clap"]  # For CLI tools
[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.35", features = ["test-util", "macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["async_tokio"] }
tracing-subscriber = "0.3"
rand = "0.8"
env_logger = "0.11"

[[bench]]
name = "ai_benchmarks"
harness = false


[lints]
workspace = true
