[package]
name = "assembly-engine"
version = "0.1.0"
edition = "2021"
description = "Kinematic assembly module for Roshera CAD — mates, grounding, clearance (Parry-backed)"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# NOTE (loop S2): parry3d-f64 is added when the static-interference slice lands.
# Slice 1 is the topological data model + grounding (no geometry numerics), so it
# carries no external collision dep and compiles fast.

[lints]
workspace = true
