[package]
name = "assembly-engine"
version = "0.1.0"
edition = "2021"
description = "Kinematic assembly module for Roshera CAD — mates, grounding, clearance (Parry-backed)"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# Parry (f64 build) — the commodity collision/CCD engine. Each instance's kernel
# tessellation becomes a TriMesh in its local frame; the instance pose is the
# world isometry. Static interference now; broad-phase + swept CCD in later
# slices. The mate-solve and the certificate stay ours.
parry3d-f64 = "0.17"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "interference"
harness = false

[lints]
workspace = true
