[package]
name = "export-engine"
version = "0.1.0"
edition = "2021"
description = "File export functionality for Roshera CAD"
license = "Apache-2.0"

[dependencies]
shared-types = { path = "../shared-types" }
geometry-engine = { path = "../geometry-engine" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
byteorder = "1.5"

# ROS format dependencies
rmp-serde = "1"
bincode = "2.0.1"
crc32fast = "1"
sha2 = "0.10"
rand = "0.8"
getrandom = "0.3.3"
ring = "0.17"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
subtle = "2.5"
zeroize = { version = "1", features = ["derive"] }
chrono = "0.4"
regex = "1"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[lints]
workspace = true
