[package]
name = "export-engine"
version = "0.1.0"
edition = "2021"
description = "File export functionality for Roshera CAD"
license = "Apache-2.0"

[dependencies]
shared-types = { path = "../shared-types" }
geometry-engine = { path = "../geometry-engine" }
timeline-engine = { path = "../timeline-engine" }
ros-format = { path = "../ros-format" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
byteorder = "1.5"

# Format-level dependencies that remain after ros-format extraction —
# `formats/ros.rs` and `formats/timeline_chunk.rs` still serialize
# BRep snapshots / HIST chunks via MessagePack, and need a few crypto
# primitives to wire ros-format keys + IVs.
rmp-serde = "1"
chrono = "0.4"

# ISO 10303-21 STEP file parser. We use only the schema-agnostic
# `ruststep::parser` layer (lexer + AST: Exchange / DataSection /
# EntityInstance / Record / Parameter) — the generated AP203 typed
# structs from `espr` are intentionally NOT consumed. Our entity →
# BRepModel mapping lives in `formats/step/handlers/`.
#
# Apache-2.0 licensed. ~7 KLoC.
ruststep = "0.4"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[lints]
workspace = true
