[package]
name = "geometry-engine"
version = "0.1.0"
edition = "2021"
description = "Geometry generation and operations for Roshera CAD"
license = "Apache-2.0"

[dependencies]
num-traits = "0.2"
arrayvec = "0.7"
parking_lot = "0.12"
lru = "0.12"
rayon = "1.8"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
tracing = "0.1"
tokio = { version = "1.0", features = ["sync", "time", "rt"] }

# Constrained Delaunay Triangulation for multi-hole planar faces.
# Pure Rust, Shewchuk-style robust adaptive geometric predicates.
# Replaces the Eberly bridge + ear-clip path which broke down on N≥4
# axis-stacked holes (see polyline_cut_harness::sequential_chain_4_cuts).
cdt = "0.1"

# 2D polygon Boolean operations (Intersection, Union, Difference, Xor)
# for the coplanar-face imprint-merge path. Pure Rust, robust against
# shared vertices, T-junctions, collinear edges, and self-intersections
# — all the degeneracies that the in-house Greiner-Hormann clipper
# rejected as InvalidGeometry. See polygon_clip.rs for the shim layer
# and union_overlapping_polyline_hexagons / union_commutative_polyline_hexagons
# for the original failure mode.
i_overlay = "6"

# R*-tree spatial index for kernel broad-phase queries (face-pair pruning
# in boolean ops, edge-proximity queries, datum-anchor lookups). Pure
# Rust, no nalgebra dep, dynamic insert/remove. Exposed via the
# `spatial::SpatialIndex` trait so the impl can be swapped (GPU LBVH,
# learned index, etc.) without touching call sites. See spatial/mod.rs.
rstar = "0.12"

# Drawing-export deliverables. SVG is rendered in-house (drawing/svg.rs);
# these crates carry the two industry-standard formats every shop also
# expects: PDF for review/archival, DXF for editable handoff. DWG is not
# shipped because it requires the proprietary ODA Teigha SDK; downstream
# users can convert DXF → DWG via the free ODA File Converter.
#
# `svg2pdf` (typst) renders our SVG through usvg → PDF — pure Rust, no
# rasterization, identical vector output to the on-screen sheet.
# `dxf` (IxMilia/dxf-rs) walks our `Drawing` struct directly so the
# exported file carries editable model-space geometry per view layer.
svg2pdf = "0.13"
dxf = "0.6"

# Agent-facing render output (AGENT-RENDER-α). Pure-Rust PNG encoder for
# the software rasterizer in `render/` — the "screenshot for agents"
# endpoint that lets VLM agents (and our own diagnostics) SEE solids
# instead of inferring shape from volume numbers and edge counts. Encoder
# use only; no image decoding anywhere in the kernel.
png = "0.17"

# SIMD optimizations
wide = "0.7"              # Portable SIMD operations
simdeez = "1.0"          # Cross-platform SIMD
bytemuck = "1.0"         # Safe transmutation for SIMD data


## Option 2: Three.js export
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
dashmap = "6.0"
thiserror = "1.0"
shared-types = { path = "../shared-types" }

## Option 4: glTF export for universal viewing
# gltf = "1.3"
# gltf-json = "1.3"

# For web frontend (Leptos + Three.js)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["WebGlRenderingContext", "WebGl2RenderingContext"] }
js-sys = "0.3"

# Dependencies for performance testing
chrono = "0.4"
num_cpus = "1.16"

# Development dependencies
[dev-dependencies]
criterion = "0.5"
approx = "0.5.1"
sysinfo = "0.32"
rand = "0.8"
paste = "1.0"
seq-macro = "0.3"
proptest = "1.5"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Test-only exact-rational oracle for the exact-predicate degeneracy harness
# (ground truth a predicate's adaptive sign must match). Pure Rust, no nalgebra;
# never compiled into the shipped kernel.
num-bigint = "0.4"
num-rational = "0.4"

[features]
default = []
export = []
profile = []
lookup_tables = []
gpu = []
ml = []

# All tests are now in src/math/test_math/

[[bench]]
name = "geometry_bench"
harness = false

[[bench]]
name = "tessellation_bench"
harness = false

[[bin]]
name = "bench_runner"
path = "src/bin/bench_runner.rs"

[lints]
workspace = true
