[package]
name = "rag-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Core async runtime
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"
futures = "0.3"  # Added for async utilities

# Data structures
dashmap = "6.0"
roaring = "0.10"
petgraph = "0.6"

# Storage
sled = "0.34"
bincode = "1.3"
lz4_flex = "0.11"

# Search
tantivy = "0.22"
levenshtein = "1.0"
simhash = "0.2"

# Parsing
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

# Math/ML
nalgebra = "0.32"
# Pure Rust matrix operations (no external BLAS needed)
ndarray = "0.15"
# Fast matrix multiplication in pure Rust
matrixmultiply = "0.3"
# Parallel processing
rayon = "1.7"
# Embedding dependencies - will add proper solution later
# For now using mock embeddings to get system compiling

# Networking
tokio-util = { version = "0.7", features = ["codec", "net"] }
bytes = "1.5"

# Memory mapping
memmap2 = "0.9"

# SIMD - removed packed_simd_2 as it requires nightly
# Using standard library SIMD features instead

# Monitoring
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Compression
lz4 = "1.24"
snap = "1.1"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
num_cpus = "1.16"
rand = "0.8"  # Added for HNSW and other randomized algorithms
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"  # For lazy statics
parking_lot = "0.12"  # Better RwLock

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"
walkdir = "2.5"

# Checksums
crc32fast = "1.4"
blake3 = "1.5"

# Pattern matching
regex = "1.10"
glob = "0.3"

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Duplicate rand removed - already defined above

# Database - using 0.6 to avoid hex conflict with prometheus
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# AWS SDK for S3
aws-config = "1.0"
aws-sdk-s3 = "1.0"

# Compression
zstd = "0.13"

# Security
sha2 = "0.10"
ed25519-dalek = "1.0"  # Use stable version
md5 = "0.7"

# Language detection
whatlang = "0.16"

# Tree-sitter for code parsing
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-java = "0.20"
tree-sitter-cpp = "0.20"

# Shared types
shared-types = { path = "../shared-types" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.10"
pretty_assertions = "1.4"

[[bench]]
name = "rag_benchmarks"
harness = false

[[bench]]
name = "quick_bench"
harness = false

[[bench]]
name = "simple_bench"
harness = false

[[bench]]
name = "scaling_bench"
harness = false

[[bench]]
name = "ann_bench"
harness = false

[[bench]]
name = "qdrant_comparison_bench"
harness = false

[[bin]]
name = "index_codebase"
path = "src/bin/index_codebase.rs"

[[bin]]
name = "admin_server"
path = "src/bin/admin_server.rs"

[[bin]]
name = "simple_search_demo"
path = "src/bin/simple_search_demo.rs"
