[package]
name = "timeline-engine"
version = "0.1.0"
edition = "2021"
authors = ["Roshera Team"]
description = "Event-sourced timeline engine for CAD history management"

[dependencies]
# Core dependencies
dashmap = "6.1"
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

# Graph operations for dependency tracking
petgraph = { version = "0.6", features = ["serde-1"] }

# Efficient synchronization primitives
parking_lot = "0.12"

# Storage
bincode = "1.3"
lz4_flex = "0.11"
crc32fast = "1.4"

# Caching
lru = "0.12"

# Hashing
sha2 = "0.10"

# Random number generation
rand = "0.8"

# Lazy static for global state
lazy_static = "1.5"

# For BRep serialization
rmp-serde = "1.3"
once_cell = "1.20"

# Shared types from the project
shared-types = { path = "../shared-types" }
geometry-engine = { path = "../geometry-engine" }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.6"
tokio-test = "0.4"
tempfile = "3.14"


[features]
default = []
# Enable additional debugging features
debug = ["tracing/max_level_trace"]
# Enable migration tools
migration = []

[lints]
workspace = true
